# news-KTK-backend

./: .gitignore  README.md  docker-compose.yml  fill_data.sh  main.py
src/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  setup.cfg
src/api/: router.py
src/api/v1/: auth.py  fcm_token.py  feedback.py  news.py  news_category.py  role.py  user.py
src/core/: auth.py  config.py  exceptions.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2025_02_16_1506-384a2d961434_added_tables_for_news.py  2025_02_19_1439-90996cba2b07_add_column_image_to_the_news_table.py  2025_03_04_0949-99408c53f9fc_init_tables.py  2025_03_20_0943-c8a74eb079a7_add_feedback_table.py  2025_04_28_1039-7c3bf5ee0169_add_roles_table.py  2025_05_05_1819-1b5f3e57b584_add_fcm_token_table.py  2025_05_15_1550-b26c95c54ff0_linked_tables_fcm_tokens_feedbacks_with_.py
src/db/models/: __init__.py  fcm_token.py  feedback.py  news.py  news_category.py  roles.py  user.py
src/db/repository/: base.py  fcm_token.py  feedback.py  news.py  news_category.py  role.py  user.py
src/schemas/: fcm_token.py  feedback.py  news.py  news_category.py  role.py  token.py  user.py
src/services/: auth.py  fcm_token.py  feedback.py  news.py  news_category.py  notification.py  role.py  user.py
