[tool.poetry]
name = "news-KTK"
version = "0.1.0"
description = ""
authors = ["Maksim-07 <kosmakovmaksim@yandex.ru>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
uvicorn = "^0.34.0"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
